fixed caption alignment

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -860,7 +860,6 @@ body section div {
     font-size: 0;
   }
   .fancybox-wrapper {
-    text-align: center;
     margin-bottom: 1.5em;
   }
   .fancybox-wrapper .caption {
